// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.DateTime UU5.Bricks.DateTime - props value 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-3-1 9:29:51 PM
</span>
`;

exports[`UU5.Bricks.DateTime UU5.Bricks.DateTime - props value 2`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2019-3-1 9:29:51 PM
</span>
`;

exports[`UU5.Bricks.DateTime className="my-classname" 1`] = `
<span
  className="uu5-bricks-date-time my-classname"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime controlled=false 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime controlled=true 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime country="en-us" 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  1/25/2018, 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime dateOnly=false 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime dateOnly=true 1`] = `
<span
  className="uu5-bricks-date-time uu5-bricks-date-time-dateonly"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25
</span>
`;

exports[`UU5.Bricks.DateTime default props 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime disabled=false 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime disabled=true 1`] = `
<span
  className="uu5-bricks-date-time uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</span>
`;

exports[`UU5.Bricks.DateTime format="d. m. Y HH:MM:SS Z (w/52) q/4" 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  25. 1. 2018 14:04:19 +01:00 (4/52) 1/4
</span>
`;

exports[`UU5.Bricks.DateTime hidden=false 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime hidden=true 1`] = `
<span
  className="uu5-bricks-date-time uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime id="myId" 1`] = `
<span
  className="uu5-bricks-date-time"
  id="myId"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime mainAttrs=undefined 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime name="myName" 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel="bigBox" 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel="bigBoxCollection" 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel="box" 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel="boxCollection" 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel="container" 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel="inline" 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel="page" 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel="smallBox" 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel="smallBoxCollection" 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime nestingLevel="spa" 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime noIndex=false 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime noIndex=true 1`] = `
<span
  className="uu5-bricks-date-time uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime pureRender=false 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime pureRender=true 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime secondsDisabled=false 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime secondsDisabled=true 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04 PM
</span>
`;

exports[`UU5.Bricks.DateTime selected=false 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime selected=true 1`] = `
<span
  className="uu5-bricks-date-time uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime style="padding:8px; borderRadius: 2px" 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime style={"backgroundColor":"red","color":"blue"} 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime timeOnly=false 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime timeOnly=true 1`] = `
<span
  className="uu5-bricks-date-time uu5-bricks-date-time-timeonly"
  id="uuID"
  style={Object {}}
  title={null}
>
  2:04:19 PM
</span>
`;

exports[`UU5.Bricks.DateTime timeZone=-3.5 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title={null}
>
  2018-1-25 9:34:19 AM
</span>
`;

exports[`UU5.Bricks.DateTime tooltip="My Tooltip" 1`] = `
<span
  className="uu5-bricks-date-time"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  2018-1-25 2:04:19 PM
</span>
`;
